Fix UI alignment issue

--- a/src/pages/MakeReservation/style.module.css
+++ b/src/pages/MakeReservation/style.module.css
@@ -7,7 +7,6 @@
 }
 
 .image-overlay {
-  width: 100vw;
   height: 100vh;
   background-color: rgba(150, 191, 1, 0.75);
 }
